--- a/index.html
+++ b/index.html
@@ -1,54 +1,45 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en-us">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | WEB_STEAM_SAMPLE</title>
-    <link rel="stylesheet" href="TemplateData/style.css">
-    <link rel="shortcut icon" href="TemplateData/favicon.ico" />
-    <script src="TemplateData/UnityProgress.js"></script>
-  </head>
+<head>
+	<meta charset="utf-8">
+	<meta content="text/html; charset=utf-8" http-equiv="Content-Type">
+	<title>Unity WebGL Player | DMJ</title>
+	<link href="TemplateData/favicon.ico" rel="shortcut icon">
+	<link href="TemplateData/style.css" rel="stylesheet">
+	<script src="TemplateData/UnityProgress.js">
+	</script>
+	<script src="Build/UnityLoader.js">
+	</script>
+	<script>
+	        var gameInstance = UnityLoader.instantiate("gameContainer", "Build/project_33.json", {onProgress: UnityProgress});
+	</script>
+</head>
+<body onresize="ChangeCanvas()">
+	<div class="webgl-content">
+		<div id="gameContainer" style="width: 100%; height: 100%"></div>
+	</div>
+	<script type="text/javascript">
+		window.onload = function() {
+			ChangeCanvas();
+	    }
 
-  <body>
-    <div class="template-wrap clear">
-
-      <canvas class="emscripten" id="canvas" oncontextmenu="event.preventDefault()" height="600px" width="960px"></canvas> 
-      <div class="backgroundpicture"></div>
-      <div id="loadingBox">
-      	<div id="bgBar"></div>
-      	<div id="progressBarBackground"></div>
-      	<div id="progressBar"></div>
-      	<p id="loadingText"></p>
-
-
-      </div>
-    </div>
-
-    <script type='text/javascript'>
-  
-	var Module = {
-    
-		TOTAL_MEMORY: 268435456,
-
-    		errorhandler: null,
-		// arguments: err, url, line. This function must return 'true' if the error is handled, otherwise 'false'
-
-    		compatibilitycheck: null,
-
-    		backgroundColor: "#000000",
-
-    		splashStyle: "Light",
-
-    		dataUrl: "Release/project_33.data",
-
-    		codeUrl: "Release/project_33.js",
-
-    		asmUrl: "Release/project_33.asm.js",
-
-    		memUrl: "Release/project_33.mem",
-
-  	};</script>
-
-	<script src="Release/UnityLoader.js"></script>	
-  </body>
+		function ChangeCanvas()
+	    {
+			if(window.innerWidth / window.innerHeight < 1.6 )
+			{
+				document.getElementById("gameContainer").style.width = window.innerWidth + "px";
+	           	document.getElementById("gameContainer").style.height = window.innerWidth *0.625+ "px";
+	           	document.getElementById("#canvas").style.width = window.innerWidth + "px";
+	           	document.getElementById("#canvas").style.height = window.innerWidth *0.625 + "px";
+			}
+			else
+			{
+				document.getElementById("gameContainer").style.width = window.innerHeight / 0.625 + "px";
+	           	document.getElementById("gameContainer").style.height = window.innerHeight + "px";
+	           	document.getElementById("#canvas").style.width = window.innerHeight / 0.625 + "px";
+	           	document.getElementById("#canvas").style.height = window.innerHeight + "px";
+			}
+		}
+	</script>
+</body>
 </html>
